# wyoming-apple-speech

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  com.wyoming-apple-speech.plist.template  com.wyoming-apple-stt.plist.template  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
context/: CLAUDE.md
context/knowledge/: wyoming-python-api.md
context/styling/: formatting.md
packaging/: build-release-tarball.sh  formula.rb.template  python-resources.rb
scripts/: install.sh  uninstall.sh
swift/: Info.plist  Package.swift
swift/Sources/AppleSTT/: LocaleMatching.swift  PCMBuffer.swift  SFSpeechEngine.swift  STTEngine.swift  SpeechAnalyzerEngine.swift  StreamingSession.swift  SupportedLanguages.swift  WorkerMode.swift  main.swift
swift/Sources/AppleTTS/: SiriEngine.swift  SystemVoices.swift  main.swift
swift/Tests/AppleSTTTests/: LocaleMatchingTests.swift  SupportedLanguagesTests.swift
swift/Tests/AppleTTSTests/: SystemVoicesTests.swift
tests/: conftest.py  test_handler.py  test_main.py  test_stt.py  test_stt_handler.py  test_tts.py  test_tts_handler.py
wyoming_apple_speech/: __init__.py  __main__.py  handler.py
wyoming_apple_stt/: __init__.py  __main__.py  handler.py  stt.py  tts.py
